--- a/packages/view/styles/editor.scss
+++ b/packages/view/styles/editor.scss
@@ -19,8 +19,8 @@
             border-right: 1px solid #dddddd;
             text-align: center;
             vertical-align: middle;
-            line-height: 25px;
-            img{
+            line-height: 27px;
+            img {
                 width: 12px;
             }
         }
@@ -54,7 +54,38 @@
         left: 0px;
         right: 0px;
         height: 30px;
+        line-height: 30px;
         background: #f0f0f0;
         border-top: 1px solid #dddddd;
+        .xm-footer-view {
+            width: 100%;
+            height: 30px;
+            display: flex;
+            flex-direction: row;
+        }
+        .xm-footer-opver-container {
+            padding: 0 30px;
+        }
+        .xm-footer-tab-container {
+            color: #9c9c9c;
+            line-height: 25px;
+            a {
+                font-size: 14px;
+                padding: 5px 15px 3px 15px;
+                border: 1px solid #9f9f9f;
+                border-top: none;
+                cursor: pointer;
+                &:hover {
+                    color: $primary;
+                }
+            }
+            a.active {
+                color: #0a0a0a;
+                background: #FFFFFF;
+                &:hover {
+                    color: $primary;
+                }
+            }
+        }
     }
 }
